# OptionsViz

./: .coverage  README.md  environment.yml  environment_news_strategies_dashboard.yml  environment_news_strategies_dashboardm.yml  pyproject.toml
.github/workflows/: build_test.yml
NewsAnalyzer/: Readme.md  app.py  llm_interface.py  main.py  news_analyzer.py  news_embedder.py  news_fetcher.py  news_processor.py  news_retriever.py
demo/: Readme.md  app.py  app_updated.py  strategies
demo/dataviz/: Readme.md  eod_chain.py
demo/news/: Readme.md  embedding_utils.py  llm_interface.py
demo/strategies/: Readme.md  advanced_options.py  json_packaging.py  main.py  options_data.py
demo/tests/: Readme.md
docs/: TechnologyReview.md  comp_spec.md  func_spec.md  milestones.md
docs/demo/: README.md
env/: environment.yml
examples/: examples.md
optionsviz/: .env  app.py  eod_chain.py  news_module.py  options_module.py  options_viz.py  strategy.py  strategyViz.py
optionsviz/images/: info.md
optionsviz/news/: embedding_utils.py  info.md  llm_interface.py  main.py  news_core.py  news_init.py
optionsviz/optionsllm/: advanced_options.py  info.md  json_packaging.py  main.py  options_data.py  optionsllm_init.py
optionsviz/st_modules/: eod_chain.py  news_module.py  options_module.py
optionsviz/tests/: test_advanced_options.py  test_app.py  test_embedding_utils.py  test_eod.py  test_json_packaging.py  test_llm_interface.py  test_main.py  test_news_core.py  test_news_main.py  test_news_module.py  test_options_data.py  test_options_module.py  test_strat.py  test_utils.py
scripts/: app.py  dynamic_chain.py  environment.yml  eod_chain.py  info.md  strategyViz.py
scripts/dataviz/: eod_chain_wrapper.py  info.md  options_viz_wrapper.py
scripts/img/: info.md
scripts/news/: info.md  main.py  news-init.py
scripts/strategies/: info.md  main.py  strategies-init.py
scripts/tests/: test_app.py  test_utils.py
scripts/utils/: chain_utils.py
strategist/: advanced_options.py  app.py  fundamentals.py  json_packaging.py  main.py  options_chain.py  readme.md
