[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "optionsviz"}

[project]
name = "optionsviz"
version = "1.0.0"
description = "A streamlit-based options market data visualization tool."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["options", "market", "finance", "stocks"]

authors = [{ name = "Ryan Richards", email = "rjr3212@uw.edu" }]
maintainers = [
  { name = "Ryan Richards", email = "rjr3212@uw.edu" },
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Investors",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
]

dependencies = [
  "matplotlib==3.9.2",
  "numpy==2.0.2",
  "pandas==2.2.3",
  "pillow==11.1.0",
  "plotly==6.0.0",
  "pylint==3.3.3",
  "seaborn==0.13.2",
  "streamlit==1.41.1",
  "scikit-learn==1.6.1",
  "scipy==1.13.1",
  "yfinance==0.2.54"
]